# brainbox

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sync-plan.md  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
e2e/: app.spec.ts
examples/: bookmarklet-direct.js  brainbox-bridge.html
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tmpclaude-599d-cwd
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs  search.rs  sync.rs  vault.rs
src/components/AISettings/: AISettings.module.css  AISettings.tsx  index.ts
src/components/BrainyChat/: BrainyChat.module.css  BrainyChat.tsx  index.ts
src/components/Button/: Button.module.css  Button.test.tsx  Button.tsx  FloatingCaptureButton.module.css
src/components/CaptureModal/: CaptureModal.d.ts  CaptureModal.jsx  CaptureModal.module.css
src/components/Card/: Card.jsx  Card.module.css  Card.tsx
src/components/ChangeCoverDialog/: ChangeCoverDialog.jsx
src/components/ChangePasswordDialog/: ChangePasswordDialog.module.css  ChangePasswordDialog.tsx  index.ts
src/components/ConfirmDialog/: ConfirmDialog.jsx
src/components/Connections/: Connections.d.ts  Connections.module.css  Connections.tsx
src/components/CreateVaultModal/: CreateVaultModal.jsx
src/components/ErrorBoundary/: ErrorBoundary.module.css  ErrorBoundary.tsx
src/components/ExportImport/: ExportImport.module.css  ExportImport.tsx  index.ts
src/components/Grid/: Grid.jsx  Grid.module.css
src/components/Header/: Header.jsx  Header.module.css
src/components/ItemPanel/: ItemPanel.module.css  ItemPanel.tsx
src/components/KeyManagement/: KeyManagement.module.css  KeyManagement.tsx  index.ts
src/components/LinkPreview/: LinkPreview.tsx
src/components/Masonry/: Masonry.css  Masonry.d.ts  Masonry.tsx
src/components/PromptDialog/: PromptDialog.tsx
src/components/Search/: SearchBar.module.css  SearchBar.tsx  SearchProvider.tsx  index.ts
src/components/SearchBar/: SearchBar.jsx  SearchBar.module.css
src/contexts/: AppStateContext.tsx  ConfirmContext.tsx  HotkeyContext.tsx  KeyboardContext.tsx  PromptContext.tsx  ThemeContext.jsx  ThemeContext.tsx  ToastContext.test.tsx  ToastContext.tsx  VaultPasswordContext.tsx
src/test/: setup.ts  utils.tsx
src/types/: ambient.d.ts  index.ts  tauri.d.ts
src/utils/: confirmService.ts  crypto.ts  meshGradient.ts  ollama.ts  searchIndexer.ts  trackpadFix.ts  urlPreview.ts  useSyncManager.ts  validation.test.ts  validation.ts
styles/: fonts.css  global.css  tokens.css  trackpad-fix.css
styles/themes/: dark.css
(+27 files in other folders)
